ooops, forgot to export new 'names' method
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_1_9/madman/Rpacks/BSgenome@20456 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ exportClasses(
 
 exportMethods(
     ## Generics defined elsewhere
-    initialize, show, "$",
+    initialize, names, show, length, "[[", "$",
     ## New generics
     unload
 )
