resync with current devel version
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_0/madman/Rpacks/BSgenome@25949 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,12 @@ exportMethods(
     ## Generics defined elsewhere
     initialize, names, show, length, "[[", "$",
     ## New generics
+    organism, species, provider, providerVersion,
+    releaseDate, releaseName, sourceUrl,
     seqnames, mseqnames, unload
 )
 
 export(
     available.genomes, getSeq, buildDataFiles
 )
+
