--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: BSgenome
 Title: Infrastructure for Biostrings-based genome data packages
 Description: Infrastructure shared by all the Biostrings-based genome data packages
-Version: 1.4.2
+Version: 1.4.1
 Author: Herve Pages
 Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: Genetics, Infrastructure
 Depends: R (>= 2.5.0), methods, Biobase (>= 1.14.0), Biostrings (>= 2.4.7)
-Suggests: BSgenome.Celegans.UCSC.ce2 (>= 1.3.1)
+Suggests: BSgenome.Celegans.UCSC.ce2
 License: LGPL
 SaveImage: yes
