Resynced with trunk version (svn merge -r 31546:31576 https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/BSgenome) in order to merge the current work on the masking feature. Version bumped to 1.8.1
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_2/madman/Rpacks/BSgenome@31581 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,12 @@ exportMethods(
 )
 
 export(
-    available.genomes, getSeq, buildDataFiles,
+    available.genomes, getSeq,
     BSgenome, injectSNPs,
-    available.SNPs
+    available.SNPs,
+
+    ## BSgenomeForge functions
+    forgeSeqFiles,
+    forgeMaskFiles
 )
 
