--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: Genetics, Infrastructure
 Depends: R (>= 2.7.0), methods, Biobase (>= 2.0.1), Biostrings (>= 2.8.6)
 Import: methods, Biobase, Biostrings
-Suggests: BSgenome.Celegans.UCSC.ce2 (>= 1.3.4)
+Suggests: BSgenome.Celegans.UCSC.ce2 (>= 1.3.4),
+	BSgenome.Hsapiens.UCSC.hg18 (>= 1.3.7),
+	hgu95av2probe
 License: Artistic-2.0
 LazyLoad: yes
