Added installed.genomes() utility. Bumped version to 1.12.4
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_4/madman/Rpacks/BSgenome@42114 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ exportClasses(
 
 export(
     ## Non-generic functions:
+    installed.genomes,
     available.genomes,
     BSgenome,
     available.SNPs,
