--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: BSgenome
 Title: Infrastructure for Biostrings-based genome data packages
-Description: Infrastructure shared by all the Biostrings-based genome data packages
-Version: 1.12.3
+Description: Infrastructure shared by all the Biostrings-based genome data
+             packages 
+Version: 1.12.4
 Author: Herve Pages
 Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: Genetics, Infrastructure
