BSgenome 1.14.2: added the installed.SNPs() function.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_5/madman/Rpacks/BSgenome@43109 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,9 @@ exportClasses(
 
 export(
     ## Non-generic functions:
-    installed.genomes,
-    available.genomes,
+    installed.genomes, available.genomes,
     BSgenome,
-    available.SNPs,
+    installed.SNPs, available.SNPs,
     bsapply,
     GenomeData, GenomeDataList, gdreduce,
 
