BSgenome 1.16.1: - Added bsgenomeName() for making the name of a BSgenome data package   from a GenomeDescription object. - Some improvements to the SNP injection mechanism.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_6/madman/Rpacks/BSgenome@46619 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ import(Biostrings)
 
 exportClasses(
     GenomeDescription,
+    InjectSNPsHandler,
     BSgenome,
     GenomeData, GenomeDataList,
 
@@ -21,9 +22,8 @@ export(
     GenomeData, GenomeDataList, gdreduce,
 
     ## Generic functions:
-    organism, species,
-    provider, providerVersion,
-    releaseDate, releaseName,
+    organism, species, provider, providerVersion,
+    releaseDate, releaseName, bsgenomeName,
     sourceUrl,
     SNPlocs_pkgname, SNPcount, SNPlocs,
     mseqnames,
@@ -46,7 +46,8 @@ exportMethods(
 
     ## Methods for generics defined in this package:
     organism, species, provider, providerVersion,
-    releaseDate, releaseName, sourceUrl,
+    releaseDate, releaseName, bsgenomeName,
+    sourceUrl,
     SNPlocs_pkgname, SNPcount, SNPlocs,
     seqnames, seqlengths, mseqnames,
     masknames,
