Backporting recent improvements to "getSeq" method for BSgenome objects.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_6/madman/Rpacks/BSgenome@47400 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 import(methods)
 import(IRanges)
-importFrom(GenomicRanges, seqnames, seqlengths, strand)
+import(GenomicRanges)
 import(Biostrings)
 
 exportClasses(
