--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Suggests: RUnit,
 	BSgenome.Hsapiens.UCSC.hg19 (>= 1.3.11),
 	SNPlocs.Hsapiens.dbSNP.20100427,
 	hgu95av2probe,
-	Biobase
+	Biobase,
+	BSgenome.Scerevisiae.UCSC.sacCer1
 License: Artistic-2.0
 LazyLoad: yes
 Collate: utils.R
