--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: BSgenome
 Title: Infrastructure for Biostrings-based genome data packages
 Description: Infrastructure shared by all the Biostrings-based genome data
              packages
-Version: 1.26.2
+Version: 1.26.1
 Author: Herve Pages
 Maintainer: H. Pages <hpages@fhcrc.org>
 biocViews: Genetics, Infrastructure, DataRepresentation, SequenceMatching,
@@ -15,8 +15,7 @@ Suggests: RUnit,
 	BSgenome.Hsapiens.UCSC.hg19 (>= 1.3.11),
 	SNPlocs.Hsapiens.dbSNP.20100427,
 	hgu95av2probe,
-	Biobase,
-	BSgenome.Scerevisiae.UCSC.sacCer1
+	Biobase
 License: Artistic-2.0
 LazyLoad: yes
 Collate: utils.R
