--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Imports: methods, stats, BiocGenerics, S4Vectors, IRanges, XVector,
 	GenomeInfoDb, GenomicRanges, Biostrings, Rsamtools, rtracklayer
 Suggests: BiocInstaller, Biobase,
 	BSgenome.Celegans.UCSC.ce2,
-	BSgenome.Hsapiens.UCSC.hg38
+	BSgenome.Hsapiens.UCSC.hg38,
 	BSgenome.Hsapiens.UCSC.hg38.masked,
 	BSgenome.Mmusculus.UCSC.mm10,
 	BSgenome.Rnorvegicus.UCSC.rn5,
